fix families list overflow

--- a/components/Tree/TreeNodeDetails/TreeNodeFamilies/TreeNodeFamilies.module.css
+++ b/components/Tree/TreeNodeDetails/TreeNodeFamilies/TreeNodeFamilies.module.css
@@ -1,6 +1,7 @@
 .familyLinksContainer {
   display: flex;
   flex-direction: column;
+  overflow: auto;
 }
 .familyLink {
   width: fit-content;
